<resources>
    <string name="app_name">FiguraGeometricaApp</string>
    <string name="texto_equipe">Equipe: Alissa Gabriel e Vinicius Cassemira</string>
    <string name="texto_aluno_1">Aluno 1: Alissa Gabriel</string>
    <string name="texto_aluno_2">Aluno 2: Vinicius Cassemira</string>
    <string name="texto_botao_iniciar">Iniciar</string>
    <string name="texto_faculdade">Faculdade de Tecnologia de Jahu</string>
    <string name="texto_ano">2025-2</string>
    <string name="texto_imagem_fatec">Imagem Logo Fatec</string>
    <string name="texto_imagem_cps">Imagem Logo CPS</string>
    <string name="texto_imagem_dsm">Imagem Logo DSM</string>
    <string name="texto_lado_1">Lado 1:</string>
    <string name="texto_entre_com_lado_1">Entre com o Lado1.</string>
    <string name="texto_lado_2">Lado 2:</string>
    <string name="texto_entre_com_lado_2">Entre com o Lado2.</string>
    <string name="texto_lado_3">Lado 3:</string>
    <string name="texto_entre_com_lado_3">Entre com o Lado3.</string>
    <string name="texto_botao_analisar">Analisar</string>
    <string name="texto_resultado">Resultado:</string>
    <string name="texto_lado_1.1">Lado 1 = </string>
    <string name="texto_lado_2.2">Lado 2 = </string>
    <string name="texto_lado_3.3">Lado 3 = </string>
    <string name="texto_resultado_figura">A Figura Geométrica identificada é um: </string>
    <string name="texto_botao_voltar">Voltar</string>

</resources>