<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivCPS"
        android:layout_width="119dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/texto_imagem_cps"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/centro_paula_souza_logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivFatec"
        android:layout_width="179dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/texto_imagem_fatec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCPS"
        app:srcCompat="@drawable/fatecjahu_2025_2" />

    <ImageView
        android:id="@+id/ivDSM"
        android:layout_width="162dp"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/texto_imagem_dsm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFatec"
        app:srcCompat="@drawable/fatecjahu_cst_dsm" />

    <TextView
        android:id="@+id/tvEquipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_equipe"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDSM" />

    <TextView
        android:id="@+id/tvAluno1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_aluno_1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEquipe" />

    <TextView
        android:id="@+id/tvAluno2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_aluno_2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAluno1" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="333dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_botao_iniciar"
        android:textSize="24sp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAluno2"
        app:strokeColor="#009688"
        app:strokeWidth="2dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvFaculdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_faculdade"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar" />

    <TextView
        android:id="@+id/tvAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_ano"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFaculdade" />
</androidx.constraintlayout.widget.ConstraintLayout>