<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntradaActivity">

    <TextView
        android:id="@+id/tvLado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/texto_lado_1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtLado1"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/texto_entre_com_lado_1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLado1"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvLado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_lado_2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLado1" />

    <EditText
        android:id="@+id/edtLado2"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/texto_entre_com_lado_2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLado2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvLado3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_lado_3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLado2" />

    <EditText
        android:id="@+id/edtLado3"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/texto_entre_com_lado_3"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLado3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnAnalisar"
        android:layout_width="333dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_botao_analisar"
        android:textSize="24sp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLado3"
        app:strokeColor="#009688"
        app:strokeWidth="2dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvSemFigura"
        android:layout_width="326dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:background="#DAF0DD5A"
        android:gravity="center"
        android:textColor="#F44336"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnalisar" />

</androidx.constraintlayout.widget.ConstraintLayout>